# poacher-detector

./: .gitignore  README.md  ino_bkp.ino
colab/evaluation/: README.md  eval_person_detector.ipynb
esp-idf/: sdkconfig  sdkconfig.old
esp-idf/main/: CMakeLists.txt  constants.h  detection_responder.cc  main_functions.cc  main_functions.h  preferences.cc  preferences.h
esp-idf/main/esp/: app_camera_esp.h  evaluate.cc  export_sequence.cc  image_provider.cc  main.cc
esp-idf/main/person_model_grayscale/: person_detect_model_data.cc
espConnection/: package-lock.json
espConnection/NodeServer/: server.js
pipeline/client/: RGB565Decoder.h  client.ino  image_util.c  image_util.h
pipeline/client_old/: client_old.ino
pipeline/server/: app.js  index.html
pipeline_highend/: README.md
pipeline_lowend/: README.md
pipeline_lowend/client/main/: CMakeLists.txt  Kconfig.projbuild  constants.h  detection_responder.cc  detection_responder.h  esp_sleep_handler.cc  esp_sleep_handler.h  esp_wifi_handler.cc  esp_wifi_handler.h  main_functions.cc  main_functions.h  model_settings.cc  secrets.example.h  stb_image_resize.h
pipeline_lowend/client/main/esp/: app_camera_esp.h  evaluate.cc  evaluate_model.cc  evaluate_pipeline.cc  export_sequence.cc  image_provider.cc  main.cc
pipeline_lowend/client/main/person_model_int8/: L2.cc  flower_detect_model_data.cc  person_detect_model_data.cc  visualwakewords_detect_model_data_0.84.cc  visualwakewords_detect_model_data_v2.cc
utils/: draw_blob_bbox.py  image_combiner.py  txt_to_numpy_image.py  video_to_bin.py
(+33 files in other folders)
